...
  const MinePage({Key? key}) : super(key: key);
  // final MineController myController = Get.put(MineController());
  @override
  Widget build(BuildContext context) {
    UserStore userStore = Get.find<UserStore>();
    return Scaffold(
      appBar: AppBar(title: const Text("Setting")),
      body: SafeArea(
        child: Obx(
          () => Column(
            children: [
              CircleAvatar(
                radius: 48,
...
                    EasyLoading.showInfo('Please log in first');
                  }
                },
              ),
              ListTile(
                leading: const Icon(Icons.post_add_outlined),
                title: const Text("My Post"),
                trailing: const Icon(Icons.chevron_right),
                onTap: () {
                  if (userStore.isLogin) {
                    Get.toNamed(AppRoutes.myPost);
                  } else {
                    EasyLoading.showInfo('Please log in first');
...
                  }
                },
              ),

              ListTile(
                leading: const Icon(Icons.shopping_bag_outlined),
                title: const Text("Completed Orders"),
                trailing: const Icon(Icons.chevron_right),
                onTap: () {
                  if (userStore.isLogin) {
                    Get.toNamed(AppRoutes.completedOrder);
                  } else {
                    EasyLoading.showInfo('Please log in first');
...
                  Icons.logout_outlined,
                  color: userStore.isLogin
                      ? Colors.red
                      : Colors.purple,
                ),
                title: Text(
                  userStore.isLogin ? "Logout" : "Login",
                  style: TextStyle(
                    color: userStore.isLogin
                        ? Colors.red
                        : Colors.purple,
                  ),
                ),
...
