...
            title: const Text("Create Post"),
            actions: [
              FilledButton(
                onPressed: () {
                  controller.createPost(context);
                },
                child: const Text("Create"),
              ),
              const SizedBox(
                width: 8,
              ),
            ],
          ),
...
                        border: OutlineInputBorder(),
                      ),
                    ),
                  ),
                  Obx(
                    () => ListTile(
                      title: const Text("Select Category"),
                      subtitle: controller.state.category == ""
                          ? const Text("Please select a category")
                          : Text("You selected ${controller.state.category}"),
                      trailing: const Icon(Icons.chevron_right),
                      onTap: () {
                        showBarModalBottomSheet(
...
