...
                    break;
                }
              },
              itemBuilder: (BuildContext context) => <PopupMenuEntry<String>>[
                // const PopupMenuItem<String>(
                //   value: 'delete',
                //   child: Text('Delete'),
                // ),
                const PopupMenuItem<String>(
                  value: 'markAsAvailable',
                  child: Text('Mark as Available'),
                ),
              ],
            ),
          ),
        ],
      ),
...
