...
          onPressed: () =>
              Navigator.of(context).pop(false), // User presses "No"
          child: const Text('No'),
        ),
        TextButton(
          onPressed: () =>
              Navigator.of(context).pop(true), // User presses "Yes"
          child: const Text('Yes'),
        ),
      ],
    ),
  );

...
