...
                            const PopupMenuItem<String>(
                              value: 'delete',
                              child: Text('Delete'),
                            ),
                            const PopupMenuItem<String>(
                              value: 'markAsSold',
                              child: Text('Mark as Sold'),
                            ),
                          ],
                        ),
                      ),
                    ],
                  );
...
